--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   firebase_core: ^1.12.0
+  image_picker: ^1.0.7
+  shared_preferences: ^2.2.2
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
