--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   permission_handler: ^11.3.0
   camera: ^0.10.5+9
   path_provider: ^2.1.2
+  sensors_plus: ^4.0.2
 
 dev_dependencies:
   flutter_test:
