--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   camera: ^0.10.5+9
   path_provider: ^2.1.2
   sensors_plus: ^4.0.2
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
