--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   uuid: ^4.3.3
   flutter_markdown: ^0.6.22+1
   flutter_launcher_icons: ^0.13.1
+  dartdoc: ^8.0.8
 
 dev_dependencies:
   flutter_test:
