--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
 
   flutter_lints: ^3.0.1
   test: ^1.24.9
+  patrol: ^3.0.1
 
 flutter:
   uses-material-design: true
